# seglens

./: Cargo.toml  PLAN.md  README.md  SECURITY.md  justfile
.github/: dependabot.yml
.github/workflows/: test.yml
examples/: wikipedia.rs
src/: builder.rs  cache.rs  error.rs  hybrid.rs  lexical.rs  lib.rs  object_store.rs  python.rs  reader.rs  storage.rs  types.rs  vector.rs
tests/: integration.rs
