[package]
name = "seglens"
version = "0.1.0"
edition = "2021"
description = "A Rust library for building and querying hybrid (semantic + lexical) search indexes optimized for object storage"
license = "MIT"

[dependencies]
object_store = "0.11"
rkyv = { version = "0.8", features = ["bytecheck"] }
bytes = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
async-trait = "0.1"
memmap2 = "0.9"
rand = "0.8"

[dependencies.futures]
version = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
serde = { version = "1", features = ["derive"] }
indicatif = "0.17"
parquet = { version = "54", default-features = false, features = ["arrow", "snap"] }
arrow-array = "54"
hf-hub = { version = "0.4", features = ["tokio"] }

[[example]]
name = "wikipedia"
path = "examples/wikipedia.rs"
